--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="/img/logo-ford-256.png" alt="Logo Ford Cabecalho">
+        <img src="./img/logo-ford-256.png" alt="Logo Ford Cabecalho">
         <nav>
             <ul>
                 <li><a href="/index.html"> Home </a></li>
