--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
         <img src="./img/logo-ford-256.png" alt="Logo Ford Cabecalho">
         <nav>
             <ul>
-                <li><a href="/index.html"> Home </a></li>
-                <li><a href="/lancamento.html"> Lançamento </a></li>
-                <li><a href="/contato.html"> Contato </a></li>
+                <li><a href="./index.html"> Home </a></li>
+                <li><a href="./lancamento.html"> Lançamento </a></li>
+                <li><a href="./contato.html"> Contato </a></li>
             </ul>
         </nav>
         <div></div>
     </header>
     <main>
         <div class="imagemPrincipal">
-            <img src="/img/imagem_1.jpg" alt="Ranger">
+            <img src="./img/imagem_1.jpg" alt="Ranger">
         </div>
-        <p> Segue lançamento da Ranger 2022. <a href="/lancamento.html"> Clique aqui </a></p>
+        <p> Segue lançamento da Ranger 2022. <a href="./lancamento.html"> Clique aqui </a></p>
     </main>
 
     <footer>
         <div class="redesSociais">
             <p> Redes Sociais </p>
-            <a href="https://facebook.com/fordbrasil"><img src="/img/facebook-50.png" alt="Facebook"></a>
-            <a href="https://instagram.com/fordbrasil"><img src="/img/instagram-logo-50.png" alt="instagram"></a>
-            <a href="https://youtube.com/fordbrasil"><img src="/img/youtube-squared-50.png" alt="Youtube"></a>
+            <a href="https://facebook.com/fordbrasil"><img src="./img/facebook-50.png" alt="Facebook"></a>
+            <a href="https://instagram.com/fordbrasil"><img src="./img/instagram-logo-50.png" alt="instagram"></a>
+            <a href="https://youtube.com/fordbrasil"><img src="./img/youtube-squared-50.png" alt="Youtube"></a>
         </div>
 
         <div class="copyright">
@@ -41,7 +41,7 @@
         </div>
 
         <div class="logo_footer">
-            <img src="/img/ford-96.png" alt="Logo footer">
+            <img src="./img/ford-96.png" alt="Logo footer">
         </div>
     </footer>
 </body>
