--- a/lancamento.html
+++ b/lancamento.html
@@ -11,12 +11,12 @@
 
 <body>
     <header>
-        <img src="/img/logo-ford-256.png" alt="Logo Ford Cabecalho">
+        <img src="./img/logo-ford-256.png" alt="Logo Ford Cabecalho">
         <nav>
             <ul>
-                <li><a href="/index.html"> Home </a></li>
-                <li><a href="/lancamento.html"> Lançamento </a></li>
-                <li><a href="/contato.html"> Contato </a></li>
+                <li><a href="./index.html"> Home </a></li>
+                <li><a href="./lancamento.html"> Lançamento </a></li>
+                <li><a href="./contato.html"> Contato </a></li>
             </ul>
         </nav>
         <div></div>
@@ -81,9 +81,9 @@
     <footer>
         <div class="redesSociais">
             <p> Redes Sociais </p>
-            <a href="https://facebook.com/fordbrasil"><img src="/img/facebook-50.png" alt=""></a>
-            <a href="https://instagram.com/fordbrasil"><img src="/img/instagram-logo-50.png" alt=""></a>
-            <a href="https://youtube.com/fordbrasil"><img src="/img/youtube-squared-50.png" alt=""></a>
+            <a href="https://facebook.com/fordbrasil"><img src="./img/facebook-50.png" alt=""></a>
+            <a href="https://instagram.com/fordbrasil"><img src="./img/instagram-logo-50.png" alt=""></a>
+            <a href="https://youtube.com/fordbrasil"><img src="./img/youtube-squared-50.png" alt=""></a>
         </div>
 
         <div class="copyright">
@@ -91,7 +91,7 @@
         </div>
 
         <div class="logo_footer">
-            <img src="/img/ford-96.png" alt="Logo footer">
+            <img src="./img/ford-96.png" alt="Logo footer">
         </div>
     </footer>
 </body>
